- [#3778] Add some hooks for the registration and unregistration process
- [#3780] Add a relation event->registrations
- [#3777] Add Model_Event::getAvailablePrices

Localization:
- [#3853] Replace "Seminar-Manager" with "Seminarmanager" in the German localizations
- [#3852] Update the French localization, thanks to Martin Rebetez

Bug fixes:
- [#5359] Action links don't trigger actions in Firefox
- [#5356] Test failure in Tx_Seminars_FrontEnd_EventEditorTest
- [#5355] Test failure in tx_seminars_FrontEnd_CountdownTest
- [#5350] Up the allows static_info_tables version to 6.2.99
- [#5340] Category selector is not cleared with the clear button
- [#5333] Update the FORMidable download link
- [#5332] EventBagBuilder needs more parentheses
- [#5282] Download link to FORMidable is split across several lines
- [#5290] Force the SQL tables with full-text indices to use the MyISAM engine
- [#5285] Warning about wrong type for number_format
- [#5276] Event headline configuration check looks in the wrong namespace
- [#5275] Test failure in BagBuilder_EventTest
- [#5264] Crash in the configcheck unit tests with the latest oelib
- [#5151] PHP Fatal error: Call to a member function sql_free_result() if using full-text search
- [#5215] Sending emails from backend not possible
- [#5214] Crash in BE events list in PHP 5.4
- [#4343] Some unit tests read the real TS setup
- [#4319} Change != to <> in SQL
- [#5178] Use time() instead of mktime()
- [#5163] Make the insert record shortcut TS compatible with 6.2
- [#5174] Avoid feInterface deprecation warnings in 6.2
- [#5085] Allow first_name and last_name in the registration form
- [#5086] Old reference to locallang.php in flexform configuration
- [#4114] Use the Core form tokens in the BE modules
- [#5071] Drop any reference to static_info_tables_taxes
- [#4836] Add compatibility with static_info_tables 2.3.x-6.0.x
- [#5070] Test failure if sr_feuser_register is not installed